grpc-mesh.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-mesh
  name: grpc-mesh
  namespace: echo-grpc
spec:
  selector:
    app: grpc-mesh
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 18080
    - name: grpc
      port: 7070
      targetPort: 17070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
  namespace: echo-grpc
spec:
  replicas: 4
  selector:
    matchLabels:
      app: grpc-mesh
      version: v1
  template:
    metadata:
      annotations:
        inject.istio.io/templates: grpc-agent
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
      labels:
        app: grpc-mesh
        version: v1
    spec:
      containers:
        - image: shanlongpan/grpc-mesh:1.1
          imagePullPolicy: IfNotPresent
          name: grpc-mesh
          ports:
            - containerPort: 17070
              protocol: TCP
            - containerPort: 18080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
  namespace: echo-grpc
spec:
  replicas: 4
  selector:
    matchLabels:
      app: grpc-mesh
      version: v2
  template:
    metadata:
      annotations:
        inject.istio.io/templates: grpc-agent
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
      labels:
        app: grpc-mesh
        version: v2
    spec:
      containers:
        - image: shanlongpan/grpc-mesh:1.1
          imagePullPolicy: IfNotPresent
          name: grpc-mesh
          ports:
            - containerPort: 17070
              protocol: TCP
            - containerPort: 18080
              protocol: TCP
